--- a/notebooks/W02. Pandas.ipynb
+++ b/notebooks/W02. Pandas.ipynb
@@ -60,10 +60,10 @@
       "execution_count": 108,
       "metadata": {
         "id": "cWXVYQmlOgk7",
-        "outputId": "0bba75b2-a3b3-4a21-d129-ae0303dc2175",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0bba75b2-a3b3-4a21-d129-ae0303dc2175"
       },
       "outputs": [
         {
@@ -83,10 +83,10 @@
       "execution_count": 109,
       "metadata": {
         "id": "cSISKOHUOglB",
-        "outputId": "77d6d10b-1eb1-4ce4-844e-3e1bd0cb5b43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "77d6d10b-1eb1-4ce4-844e-3e1bd0cb5b43"
       },
       "outputs": [
         {
@@ -137,11 +137,11 @@
       "execution_count": 111,
       "metadata": {
         "id": "GD2qMhAxOglK",
-        "outputId": "5a7565c2-9cc7-45c2-ebaa-2b737f3be39f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 359
-        }
+          "height": 341
+        },
+        "outputId": "5a7565c2-9cc7-45c2-ebaa-2b737f3be39f"
       },
       "outputs": [
         {
@@ -623,11 +623,11 @@
       "execution_count": 112,
       "metadata": {
         "id": "SqAN20onOglN",
-        "outputId": "22a9198b-b3af-4dcf-d601-f03c4f2d5c78",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 359
-        }
+          "height": 341
+        },
+        "outputId": "22a9198b-b3af-4dcf-d601-f03c4f2d5c78"
       },
       "outputs": [
         {
@@ -1104,10 +1104,10 @@
       "execution_count": 113,
       "metadata": {
         "id": "amopH87LOglQ",
-        "outputId": "0f031068-1dbd-4d7a-d9c7-c2e7bbc0e72f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0f031068-1dbd-4d7a-d9c7-c2e7bbc0e72f"
       },
       "outputs": [
         {
@@ -1154,11 +1154,11 @@
       "execution_count": 114,
       "metadata": {
         "id": "VJDvuHzvOglU",
-        "outputId": "0033e95e-4ed4-46cc-c6d8-18d32afe0156",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 390
-        }
+          "height": 373
+        },
+        "outputId": "0033e95e-4ed4-46cc-c6d8-18d32afe0156"
       },
       "outputs": [
         {
@@ -1666,10 +1666,10 @@
       "execution_count": 115,
       "metadata": {
         "id": "D9tXjsnGOglW",
-        "outputId": "c8c4423e-9aa3-425a-a61c-12cbfd4216e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c8c4423e-9aa3-425a-a61c-12cbfd4216e2"
       },
       "outputs": [
         {
@@ -1713,10 +1713,10 @@
       "execution_count": 116,
       "metadata": {
         "id": "3e7BrLoCOglZ",
-        "outputId": "0e318c34-ff1e-449a-bc71-98c263f778c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0e318c34-ff1e-449a-bc71-98c263f778c7"
       },
       "outputs": [
         {
@@ -1748,10 +1748,10 @@
       "execution_count": 117,
       "metadata": {
         "id": "R7Ix_HYPOglc",
-        "outputId": "3d6ee755-3cff-4aed-ec03-fe23c8374a40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3d6ee755-3cff-4aed-ec03-fe23c8374a40"
       },
       "outputs": [
         {
@@ -1812,10 +1812,10 @@
       "execution_count": 118,
       "metadata": {
         "id": "PYBoACruOglg",
-        "outputId": "f41890c9-101a-49f8-8184-915aed517aff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f41890c9-101a-49f8-8184-915aed517aff"
       },
       "outputs": [
         {
@@ -1892,11 +1892,11 @@
       "execution_count": 119,
       "metadata": {
         "id": "y5CBXm8HOgln",
-        "outputId": "bc894a57-caf3-43e0-d49c-29d108834180",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 741
-        }
+          "height": 740
+        },
+        "outputId": "bc894a57-caf3-43e0-d49c-29d108834180"
       },
       "outputs": [
         {
@@ -1976,11 +1976,11 @@
       "execution_count": 120,
       "metadata": {
         "id": "WTfrHUP6Oglr",
-        "outputId": "b3abbb8c-f275-41fd-a89e-0c42f98c852c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 346
-        }
+          "height": 339
+        },
+        "outputId": "b3abbb8c-f275-41fd-a89e-0c42f98c852c"
       },
       "outputs": [
         {
@@ -2375,14 +2375,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 126,
       "metadata": {
-        "id": "FOg8EqR_VBPv",
-        "outputId": "26d0ea59-87ab-44c7-cca9-4b75330c7165",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FOg8EqR_VBPv",
+        "outputId": "3623137f-fcad-481d-bd05-7f7df016e764"
       },
       "outputs": [
         {
@@ -2498,18 +2497,20 @@
             "0  by subject  Chemistry Literature Physics Physiology or Med...,               0                                                  1\n",
             "0     by groups  Peace AFSC Nobel nominees PRIO Director's Shor...\n",
             "1  by Clarivate  Female Chemistry Economics1 Physics Physiology...,               0                                                  1\n",
-            "0  by Clarivate  Female Chemistry Economics1 Physics Physiology...]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-122-ff7c403e994d>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mchem_tables\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_html\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mchem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchem_tables\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+            "0  by Clarivate  Female Chemistry Economics1 Physics Physiology...]\n",
+            "   Year Image                               Laureate[A]      Country[B]  \\\n",
+            "0  1901   NaN  Jacobus Henricus van 't Hoff (1852–1911)     Netherlands   \n",
+            "1  1902   NaN          Hermann Emil Fischer (1852–1919)         Germany   \n",
+            "2  1903   NaN       Svante August Arrhenius (1859–1927)          Sweden   \n",
+            "3  1904   NaN            Sir William Ramsay (1852–1916)  United Kingdom   \n",
+            "4  1905   NaN              Adolf von Baeyer (1835–1917)         Germany   \n",
+            "\n",
+            "                                        Rationale[C]   Ref  \n",
+            "0  \"[for his] discovery of the laws of chemical d...  [18]  \n",
+            "1     \"[for] his work on sugar and purine syntheses\"  [19]  \n",
+            "2    \"[for] his electrolytic theory of dissociation\"  [20]  \n",
+            "3  \"[for his] discovery of the inert gaseous elem...  [21]  \n",
+            "4  \"[for] the advancement of organic chemistry an...  [22]  \n"
           ]
         }
       ],
@@ -2519,8 +2520,7 @@
         "tables=pandas.read_html(url)\n",
         "print(tables)\n",
         "\n",
-        "chem_tables = pd.read_html(url)\n",
-        "chem = chem_tables[0]\n",
+        "chem_tables = pandas.read_html(url)\n",
         "print(chem.head())\n",
         "\n",
         "\n",
@@ -2540,12 +2540,12 @@
       "cell_type": "code",
       "execution_count": 124,
       "metadata": {
-        "id": "ZxuZMaHwVBPv",
-        "outputId": "8c9ce70c-1e1d-4994-9e21-83800aeec021",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 923
-        }
+        },
+        "id": "ZxuZMaHwVBPv",
+        "outputId": "8c9ce70c-1e1d-4994-9e21-83800aeec021"
       },
       "outputs": [
         {
